# pinktyl

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
src/: key.rs  layout.rs  lib.rs  matrix.rs
