[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
name = "pinktyl"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-rtt = { version = "0.4.1" }
frunk = { version = "0.4.3", default-features = false }
heapless = "0.8.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0.2", features = ["cortex-m-systick"] }
stm32f4xx-hal = { version = "0.21.0", features = ["stm32f411", "usb_fs"] }
systick-monotonic = "1.0.1"
usb-device = { version = "0.3.2", features = ["defmt"] }
usbd-human-interface-device = { version = "0.5.0", features = ["defmt"] }
# TODO add a monotonic if you use scheduling
# rtic-monotonics = { version = "1.0.0", features = [ "cortex-m-systick" ]}
[[bin]]
name = "pinktyl"
test = false
bench = false
[lib]
test = false
bench = false
# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-
